feat: patch cluster api
